# core-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  sa.json
scripts/: build_image_and_push  install  run  test
src/: main.py
src/core/: auth.py  clients.py  config.py  custom_exceptions.py  dependencies.py  helpers.py  http_client.py  logger.py
src/external_api/: cloud_storage.py
src/models/: user.py
src/routes/: auth.py  meal.py  meal_plan.py  shopping_list.py  token.py  user.py
src/schemas/: exception.py  meal.py  meal_plan.py  shopping_list.py  user.py
src/security/: funcs.py  headers.py  oauth.py  token.py  token_tools.py
src/services/: auth.py  meal.py  meal_plan.py  payments.py  shopping_list.py  user.py
tests/: conftest.py
